hphp/test/slow/parser/async-constructor.php.expectf
Fatal error: %s in %s/hphp/test/slow/parser/async-constructor.php on line 4
